@@ -531,10 +531,6 @@ object frmOptions: TfrmOptions
     object pagCSS: TTabSheet
       Caption = '&CSS'
       ImageIndex = 6
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object lblCSSTemplate: TLabel
         Left = 7
         Top = 46
@@ -581,10 +577,6 @@ object frmOptions: TfrmOptions
     object pagEXE: TTabSheet
       Caption = '&EXE'
       ImageIndex = 6
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkEXEDisablePETrim: TCheckBox
         Left = 7
         Top = 22
@@ -602,10 +594,6 @@ object frmOptions: TfrmOptions
     object pagGZ: TTabSheet
       Caption = '&GZ'
       ImageIndex = 6
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkGZCopyMetadata: TCheckBox
         Left = 7
         Top = 22
@@ -621,10 +609,6 @@ object frmOptions: TfrmOptions
     object pagHTML: TTabSheet
       Caption = '&HTML'
       ImageIndex = 6
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkHTMLEnableTidy: TCheckBox
         Left = 7
         Top = 22
@@ -642,10 +626,6 @@ object frmOptions: TfrmOptions
     object pagJPEG: TTabSheet
       Caption = '&JPEG'
       ImageIndex = 5
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object lblFreshclamConfValue: TLabel
         Left = 193
         Top = 147
@@ -710,10 +690,6 @@ object frmOptions: TfrmOptions
     object pagJS: TTabSheet
       Caption = '&JS'
       ImageIndex = 6
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkJSEnableJSMin: TCheckBox
         Left = 7
         Top = 22
@@ -731,10 +707,6 @@ object frmOptions: TfrmOptions
     object pagLUA: TTabSheet
       Caption = '&LUA'
       ImageIndex = 12
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkLUAEnableLeanify: TCheckBox
         Left = 7
         Top = 22
@@ -752,10 +724,6 @@ object frmOptions: TfrmOptions
     object pagMP3: TTabSheet
       Caption = '&MP3'
       ImageIndex = 8
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkMP3CopyMetadata: TCheckBox
         Left = 7
         Top = 22
@@ -771,10 +739,6 @@ object frmOptions: TfrmOptions
     object pagPDF: TTabSheet
       Caption = '&PDF'
       ImageIndex = 7
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object lblPDFProfile: TLabel
         Left = 7
         Top = 22
@@ -836,10 +800,6 @@ object frmOptions: TfrmOptions
     object pagPNG: TTabSheet
       Caption = '&PNG'
       ImageIndex = 10
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkPNGCopyMetadata: TCheckBox
         Left = 7
         Top = 22
@@ -851,14 +811,24 @@ object frmOptions: TfrmOptions
         ShowHint = True
         TabOrder = 0
       end
+      object chkPNGAllowLossy: TCheckBox
+        Left = 7
+        Top = 41
+        Width = 281
+        Height = 17
+        Hint = 
+          'Allowing lossy optimizations will get higher files reduction at ' +
+          'the cost of some quality loss, even if visually unnoticeable or ' +
+          'not'
+        Caption = '&Allow lossy optimizations'
+        ParentShowHint = False
+        ShowHint = True
+        TabOrder = 1
+      end
     end
     object pagXML: TTabSheet
       Caption = '&XML'
       ImageIndex = 11
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkXMLEnableLeanify: TCheckBox
         Left = 7
         Top = 22
@@ -876,10 +846,6 @@ object frmOptions: TfrmOptions
     object pagZIP: TTabSheet
       Caption = '&ZIP'
       ImageIndex = 9
-      ExplicitLeft = 0
-      ExplicitTop = 0
-      ExplicitWidth = 0
-      ExplicitHeight = 0
       object chkZIPCopyMetadata: TCheckBox
         Left = 7
         Top = 22
@@ -907,7 +873,7 @@ object frmOptions: TfrmOptions
   object butRestoreDefaults: TButton
     Left = 8
     Top = 374
-    Width = 89
+    Width = 95
     Height = 25
     Hint = 'Restore all options to its factory settings values'
     Caption = '&Restore defaults'
